# robstride_hardware_interface

./: CMakeLists.txt  README.md  package.xml
config/: motor_setting.yaml
include/robstride_rdk_ros2/: CanTransport.hpp  MainControl.hpp  RobStrideMotor.hpp  RobStrideProtocol.hpp  filter.hpp
launch/: robstride.launch.py
scripts/: can_setup.sh
src/: CanTransport.cpp  MainControl.cpp  RobStrideMotor.cpp  RobStrideProtocol.cpp  filter.cpp
