<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robstride_hardware_interface</name>
  <version>0.0.1</version>
  <description>RobStride Motor Control SDK (Refactored)</description>
  <maintainer email="m77956106@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 의존성 패키지 -->
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend> <depend>lifecycle_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
